Bug 421928 - Present Windows Effect inappropriately uses the pointing finger cursor
Summary: Present Windows Effect inappropriately uses the pointing finger cursor
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-present-windows (other bugs)
Version First Reported In: 5.18.5
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-22 19:02 UTC by Andres Betts
Modified: 2021-06-18 13:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andres Betts 2020-05-22 19:02:29 UTC
SUMMARY
Currently, when the user enters the Present Windows effect, the mouse will change from the arrow pointer to a hand pointer. I propose that we keep the pointer as an arrow and minimize the hand transformation to thinks like web links.

It will make the experience more unified for the user.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2021-06-17 20:06:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1112
Comment 2 Nate Graham 2021-06-18 13:00:15 UTC
Git commit c9a719e109fc7b941baa582f95960c87d581e2de by Nate Graham.
Committed on 18/06/2021 at 12:58.
Pushed by ngraham into branch 'master'.

[effects] Use standard arrow cursor in Present Windows & Desktop Grid

The pointing finger cursor is used to show that a piece of text is a
clickable link, and it is inappropriate to use it in other contexts.
Regular UI elements that do something when single-clicked continue to
use the standard arrow cursor in other contexts, so let's follow that
convention in the Present Windows and Desktop Grid effects too.
FIXED-IN: 5.23

M  +2    -2    src/effects/desktopgrid/desktopgrid.cpp
M  +1    -1    src/effects/presentwindows/presentwindows.cpp

https://invent.kde.org/plasma/kwin/commit/c9a719e109fc7b941baa582f95960c87d581e2de